# NORway

./: .gitignore  NANDway-py3.py  NANDway.py  NANDway_Changes.txt  NANDway_README.txt  NORway-py3.py  NORway.py  NORway_Changes.txt  NORway_README.txt  README.txt  SPIway.py  SPIway_Changes.txt  SPIway_README.txt  TeensySerial.py  changes.txt  norpatch_README.txt  perf-test.txt
NANDway/: NANDway.atsln  NANDway.c  NANDway.cproj  delay_x.h
NANDway/Dual NAND Edition/: Makefile  NANDway_DualNANDEdition.hex
NANDway/Signal Booster Edition/: Makefile  NANDway_SignalBoosterEdition.hex  makedep.mk
NORway/: NORway.atsln  NORway.c  NORway.cproj  usb_serial.c
NORway/default/: Makefile  NORway.hex
SPIway/: SPI_AVR8.h  SPIway.atsln  SPIway.c  SPIway.cproj  usb_serial.h
SPIway/Release/: SPIway.hex
pico/: CMakeLists.txt  README.md
pico/NANDway/: main.c
pico/NORway/: main.c
pico/boards/: pico2b.h
pico/common/: CMakeLists.txt  bootloader.c  bootloader.h  delay.c  delay.h  mem_utils.c  mem_utils.h  usb_serial.c  usb_serial.h
teensy/: NORway.avrgccproj  NORway.c  usb_serial.c
teensy/default/: Makefile  NORway.hex  makedep.mk
teensyNAND/: NANDway.atsln  NANDway.avrgccproj  NANDway.avrsln  NANDway.c  usb_serial.c
teensyNAND/default/: Makefile  NANDWay.hex  makedep.mk
teensyNOR/: NORway.avrsln  NORway.c
teensyNOR/default/: Makefile  NORway.hex
